--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -6,6 +6,7 @@
 
 .profile__avatar {
   margin-right: 20px;
+  border-radius: 8%;
 }
 
 .profile__column {
@@ -15,16 +16,37 @@
 
 .profile__name {
   margin: 0 0 12px;
+  font-weight: 500;
 }
 
 .profile__description {
   margin: 0;
+  color: rgba(33, 33, 33, 0.7);
 }
 
 .profile__edit-btn {
   margin-top: auto;
+  margin-right: auto;
+  background: none;
+  border: none;
+  opacity: 70%;
+  color: rgba(33, 33, 33, 1);
+  display: flex;
+  gap: 8px;
 }
 
 .profile__new-post {
   margin-left: auto;
+  margin-top: auto;
+  background-color: rgba(33, 33, 33, 1);
+  border-radius: 8px;
+  width: 149px;
+  height: 52px;
+  border: none;
+  color: #fcf5e5;
+  padding: 18px 0;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  align-items: center;
 }
