--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -7,6 +7,8 @@
 .profile__avatar {
   margin-right: 20px;
   border-radius: 8%;
+  height: 190px;
+  width: 190px;
 }
 
 .profile__column {
@@ -16,23 +18,31 @@
 
 .profile__name {
   margin: 0 0 12px;
+  font-size: 32px;
   font-weight: 500;
+  line-height: 1;
 }
 
 .profile__description {
   margin: 0;
   color: rgba(33, 33, 33, 0.7);
+  font-size: 16px;
 }
 
 .profile__edit-btn {
   margin-top: auto;
-  margin-right: auto;
+  padding: 0;
   background: none;
   border: none;
   opacity: 70%;
   color: rgba(33, 33, 33, 1);
   display: flex;
   gap: 8px;
+}
+
+.profile__edit-btn:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 .profile__new-post {
@@ -49,4 +59,43 @@
   justify-content: center;
   gap: 8px;
   align-items: center;
+}
+
+.profile__new-post:hover {
+  cursor: pointer;
+  opacity: 80%;
+}
+
+@media screen and (max-width: 780px) {
+  .profile {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .profile__avatar {
+    margin: 0 0 12px;
+    width: 80px;
+    height: 80px;
+  }
+
+  .profile__name {
+    margin: 0 0 6px;
+    font-size: 20px;
+    text-wrap: nowrap;
+  }
+
+  .profile__column {
+    margin: 0 0 20px;
+  }
+
+  .profile__edit-btn {
+    margin: 32px auto 0;
+  }
+
+  .profile__new-post {
+    margin: 0 auto;
+    width: 100%;
+  }
 }
