--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -66,7 +66,7 @@
   opacity: 80%;
 }
 
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 650px) {
   .profile {
     flex-direction: column;
     align-items: center;
@@ -83,7 +83,6 @@
   .profile__name {
     margin: 0 0 6px;
     font-size: 20px;
-    text-wrap: nowrap;
   }
 
   .profile__column {
@@ -96,6 +95,6 @@
 
   .profile__new-post {
     margin: 0 auto;
-    width: 100%;
+    width: 288px;
   }
 }
