--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,11 +1,14 @@
 .cards {
-  margin: 0;
-  display: flex;
+  margin: 0 auto;
+  padding-top: 20px;
 }
 
 .cards__list {
-  padding: 20px 80px 60px;
-  list-style: none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 413px);
+  gap: 40px 20px;
+  justify-content: center;
 }
