--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,9 +1,5 @@
-.card {
-  max-width: 413px;
-}
-
 .card__image {
-  width: 413px;
+  width: 100%;
   height: 413px;
   object-fit: cover;
   border-radius: 8px;
