--- a/blocks/card.css
+++ b/blocks/card.css
@@ -17,6 +17,10 @@
   font-size: 20px;
   margin: 0;
   padding-top: 12px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 350px;
 }
 
 .card__heart-icon {
@@ -36,5 +40,9 @@
 @media screen and (max-width: 630px) {
   .card__image {
     height: 288px;
+  }
+
+  .card__title {
+    max-width: 200px;
   }
 }
