--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -21,12 +21,24 @@
   font-size: 32px;
   font-weight: 500;
   line-height: 1;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__description {
   margin: 0;
   color: rgba(33, 33, 33, 0.7);
   font-size: 16px;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__edit-btn {
@@ -83,6 +95,11 @@
   .profile__name {
     margin: 0 0 6px;
     font-size: 20px;
+    max-width: 288px;
+  }
+
+  .profile__description {
+    max-width: 288px;
   }
 
   .profile__column {
