--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,7 +1,3 @@
-/* .modal_is-opened {
-  visibility: visible;
-} */
-
 .modal {
   visibility: hidden;
   background-color: #00000080;
@@ -14,6 +10,10 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+}
+
+.modal_is-opened {
+  visibility: visible;
 }
 
 .modal__container {
