--- a/blocks/card.css
+++ b/blocks/card.css
@@ -37,6 +37,15 @@
   cursor: pointer;
 }
 
+.card__heart-icon_active {
+  background-image: url(../images/liked.png);
+  opacity: 1;
+}
+
+.card__heart-icon_active:hover {
+  opacity: 40%;
+}
+
 @media screen and (max-width: 630px) {
   .card__image {
     height: 288px;
