--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,3 +1,23 @@
+.card {
+  position: relative;
+}
+
+.card__delete-btn {
+  background-image: url(../images/delete.png);
+  width: 32px;
+  height: 32px;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.card__delete-btn:hover {
+  background-image: url(../images/delete-hover.png);
+}
+
 .card__image {
   width: 100%;
   height: 413px;
