--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -97,9 +97,47 @@
   background-color: rgba(33, 33, 33, 1);
 }
 
+.modal_type_image-preview {
+  padding: 0 16px;
+}
+
 .modal__submit:hover {
   cursor: pointer;
   opacity: 80%;
+}
+
+.modal__image-container {
+  position: relative;
+}
+
+.modal__image {
+  max-width: 80vw;
+  max-height: 80vh;
+  width: 100%;
+  object-fit: contain;
+  display: block;
+  border-radius: 8px;
+}
+
+.modal__close_type_preview {
+  position: absolute;
+  right: -52.5px;
+  opacity: 1;
+}
+
+.modal__close_type_preview:hover {
+  opacity: 40%;
+}
+
+.modal__caption {
+  display: inline-block;
+  padding: 4px 8px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: 200;
+  margin: 8px 0 0 0;
+  background-color: #212121;
+  color: white;
 }
 
 @media screen and (max-width: 630px) {
@@ -119,5 +157,14 @@
 
   .modal__label {
     margin: 0 0 24px;
+  }
+
+  .modal__close_type_preview {
+    top: -48px;
+    right: 0;
+  }
+
+  .modal__image {
+    max-width: unset;
   }
 }
