--- a/blocks/card.css
+++ b/blocks/card.css
@@ -26,6 +26,10 @@
   display: block;
 }
 
+.card__image:hover {
+  cursor: pointer;
+}
+
 .card__content {
   display: flex;
   justify-content: space-between;
