--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -97,6 +97,11 @@
   background-color: rgba(33, 33, 33, 1);
 }
 
+.modal__submit:hover {
+  cursor: pointer;
+  opacity: 80%;
+}
+
 @media screen and (max-width: 630px) {
   .modal__container {
     padding: 12px;
