:lipstick:Add button transition delays

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -47,6 +47,7 @@
   width: 40px;
   height: 40px;
   opacity: 40%;
+  transition: opacity 0.5s;
 }
 
 .modal__close-btn:hover {
@@ -95,11 +96,13 @@
   border-radius: 8px;
   color: rgba(252, 245, 229, 1);
   background-color: rgba(33, 33, 33, 1);
+  transition: opacity 0.5s;
 }
 
 .modal__submit:hover {
   cursor: pointer;
   opacity: 80%;
+  transition: opacity 0.5s;
 }
 
 @media screen and (max-width: 630px) {
