--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,10 +12,12 @@
   top: 10px;
   right: 10px;
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .card__delete-btn:hover {
   background-image: url(../images/delete-hover.png);
+  transition: 0.5s;
 }
 
 .card__image {
@@ -54,6 +56,7 @@
   border: none;
   background-color: transparent;
   opacity: 40%;
+  transition: opacity 0.5s;
 }
 
 .card__heart-icon:hover {
