Change preview modal names for BEM

--- a/blocks/preview-modal.css
+++ b/blocks/preview-modal.css
@@ -1,8 +1,8 @@
-.modal_type_image-preview {
+.modal_type_image_preview {
   padding: 0 16px;
 }
 
-.modal__image-container {
+.modal__image_container {
   position: relative;
 }
 
