--- a/blocks/card.css
+++ b/blocks/card.css
@@ -13,6 +13,7 @@
   right: 10px;
   cursor: pointer;
   transition: 0.5s;
+  z-index: 1;
 }
 
 .card__delete-btn:hover {
@@ -31,6 +32,7 @@
 /* how would you add opacity on hover without interfering with the delete? */
 .card__image:hover {
   cursor: pointer;
+  opacity: 80%;
 }
 
 .card__content {
