--- a/blocks/card.css
+++ b/blocks/card.css
@@ -66,11 +66,13 @@
 .card__heart-btn:hover {
   opacity: 1;
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .card__heart-btn_active {
   background-image: url(../images/liked.png);
   opacity: 1;
+  transition: 0.5s;
 }
 
 .card__heart-btn_active:hover {
