--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -73,7 +73,7 @@
   font-size: 18px;
   border-radius: 8px;
   border: 1px solid rgba(33, 33, 33, 0.4);
-  margin: 8px 0 0;
+  margin: 8px 0;
   width: 100%;
   padding: 16px 7px 16px 12px;
   text-overflow: ellipsis;
@@ -87,6 +87,13 @@
 .modal__input:hover {
   border-color: rgba(33, 33, 33, 1);
   cursor: pointer;
+}
+
+.modal__error {
+  display: block;
+  color: #ff0000b2;
+  font-size: 16px;
+  margin: 0;
 }
 
 .modal__submit {
