--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -63,6 +63,7 @@
 }
 
 .modal__label {
+  display: block;
   font-size: 16px;
   margin: 0 0 32px;
   color: rgba(33, 33, 33, 0.7);
@@ -73,7 +74,7 @@
   font-size: 18px;
   border-radius: 8px;
   border: 1px solid rgba(33, 33, 33, 0.4);
-  margin: 8px 0;
+  margin: 8px 0 0;
   width: 100%;
   padding: 16px 7px 16px 12px;
   text-overflow: ellipsis;
@@ -93,7 +94,7 @@
   display: block;
   color: #ff0000b2;
   font-size: 16px;
-  margin: 0;
+  margin: 8px 0 0;
 }
 
 .modal__submit {
