--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -97,6 +97,14 @@
   margin: 8px 0 0;
 }
 
+.modal__input_type_error {
+  border: rgba(255, 0, 0, 0.6) 1px solid;
+}
+
+.modal__input_type_error:hover {
+  border: rgba(255, 0, 0, 0.6) 1px solid;
+}
+
 .modal__submit {
   padding: 18px 58px;
   max-width: 156px;
