--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -4,8 +4,48 @@
   border-bottom: 1px solid #66212121;
 }
 
-.profile__avatar {
+.profile__avatar-container {
+  position: relative;
   margin-right: 20px;
+}
+
+/* Fix button height */
+.profile__avatar-btn {
+  display: flex;
+  position: absolute;
+  z-index: 1;
+  /* background: transparent; */
+  border: none;
+  border-radius: 8%;
+  width: 100%;
+  height: 100%;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 8px;
+  visibility: hidden;
+  margin: 0;
+  padding: 0;
+  background-color: #00000080;
+}
+
+.profile__avatar-container:hover .profile__avatar-btn {
+  visibility: visible;
+  margin: 0;
+  cursor: pointer;
+}
+
+.profile__avatar-btn:after {
+  content: "Edit Avatar";
+  color: #ffffff;
+  padding-bottom: 12px;
+}
+
+.profile__avatar-edit {
+  padding-bottom: 12px;
+  margin: 0;
+}
+
+.profile__avatar {
   border-radius: 8%;
   height: 190px;
   width: 190px;
@@ -92,6 +132,25 @@
     margin: 0 0 12px;
     width: 80px;
     height: 80px;
+  }
+
+  .profile__avatar-btn {
+    visibility: visible;
+    width: 23.34px;
+    height: 23.34px;
+    bottom: 4.6px;
+    right: 4.6px;
+    border-radius: 6px;
+  }
+
+  .profile__avatar-btn:after {
+    content: "";
+  }
+
+  /* Center pencil in button */
+  .profile__avatar-edit {
+    align-items: center;
+    justify-content: center;
   }
 
   .profile__name {
