--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,3 +9,4 @@
 @import url(../blocks/footer.css);
 @import url(../blocks/modal.css);
 @import url(../blocks/preview-modal.css);
+@import url(../blocks/delete-modal.css);
