--- a/src/blocks/delete-modal.css
+++ b/src/blocks/delete-modal.css
@@ -4,10 +4,10 @@
   flex-wrap: wrap;
   align-content: center;
   max-width: 630px;
+  text-align: center;
 }
 
 .delete_title {
-  text-align: center;
   font-size: 24px;
 }
 
@@ -16,16 +16,20 @@
   justify-content: center;
   width: 100%;
   gap: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .btn_delete {
   background-color: #ff6565;
   color: #212121;
+  width: 156px;
 }
 
 .btn_cancel {
   border: 1px solid #212121;
   background-color: #fcf5e5;
+  width: 156px;
   color: #212121;
 }
 
