--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -9,12 +9,10 @@
   margin-right: 20px;
 }
 
-/* Fix button height */
 .profile__avatar-btn {
   display: flex;
   position: absolute;
   z-index: 1;
-  /* background: transparent; */
   border: none;
   border-radius: 8%;
   width: 100%;
@@ -22,15 +20,16 @@
   align-items: flex-end;
   justify-content: center;
   gap: 8px;
-  visibility: hidden;
+  opacity: 0;
   margin: 0;
   padding: 0;
   padding: 12px;
   background-color: #00000080;
+  transition: opacity 0.5s;
 }
 
 .profile__avatar-container:hover .profile__avatar-btn {
-  visibility: visible;
+  opacity: 1;
   margin: 0;
   cursor: pointer;
 }
